[workspace]
resolver = "2"
members = [
    "day01/puzzle1",
    "day01/puzzle2",
    "day02/puzzle1",
    "day02/puzzle2",
    "day03/puzzle1",
    "day03/puzzle2",
    "day04/puzzle1",
    "day04/puzzle2",
    "day05/puzzle1",
    "day05/puzzle2",
    "day06/puzzle1",
    "day06/puzzle2",
    "day07/puzzle1",
    "day07/puzzle2",
    "day08/puzzle1",
    "day08/puzzle2",
    "day09/puzzle1",
    "day09/puzzle2",
    "day10/puzzle1",
    "day10/puzzle2",
    "day11/puzzle1",
    "day11/puzzle2",
    "day12/puzzle1",
    "day12/puzzle2",
    "day13/puzzle1",
    "day13/puzzle2",
    "day14/puzzle1",
    "day14/puzzle2",
    "day15/puzzle1",
    "day15/puzzle2",
    "day16/puzzle1",
    "day16/puzzle2",
    "day17/puzzle1",
    "day17/puzzle2",
    "day18/puzzle1",
    "day18/puzzle2",
    "day19/puzzle1",
    "day19/puzzle2",
    "day20/puzzle1",
    "day20/puzzle2",
    "day21/puzzle1",
    "day21/puzzle2",
    "day22/puzzle1",
    "day22/puzzle2",
]
